--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,9 +43,10 @@
         android:id="@+id/start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="45dp"
+        android:layout_below="@+id/endTime"
+        android:layout_marginTop="29dp"
+        android:layout_toEndOf="@+id/textView6"
+        android:layout_toRightOf="@+id/textView6"
         android:text="开始" />
 
     <TextView
@@ -55,7 +56,7 @@
         android:layout_alignStart="@+id/textView"
         android:layout_below="@+id/textView"
         android:layout_marginTop="28dp"
-        android:text="error: "
+        android:text="错误信息: "
         android:id="@+id/textView3" />
 
     <TextView
@@ -69,14 +70,15 @@
         android:text="无" />
 
     <TextView
+        android:id="@+id/textView6"
         android:layout_width="wrap_content"
+
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView3"
         android:layout_alignStart="@+id/textView3"
         android:layout_below="@+id/textView3"
-        android:layout_marginTop="19dp"
-        android:text="当前翻译的数量为 ： "
-        android:id="@+id/textView6" />
+        android:layout_marginTop="13dp"
+        android:text="当前翻译的数量为 ： " />
 
     <TextView
         android:id="@+id/num"
@@ -92,7 +94,8 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView6"
         android:layout_alignStart="@+id/textView6"
-        android:layout_centerVertical="true"
+        android:layout_below="@+id/textView6"
+        android:layout_marginTop="13dp"
         android:text="总数量为： " />
 
     <TextView
@@ -138,6 +141,16 @@
         android:layout_alignTop="@+id/textView11"
         android:layout_centerHorizontal="true"
         android:text="0" />
+
+    <Button
+        android:id="@+id/stop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/start"
+        android:layout_alignStart="@+id/start"
+        android:layout_below="@+id/start"
+        android:layout_marginTop="24dp"
+        android:text="停止" />
 
 
 </RelativeLayout>
