实现开机自动从后台拉取数据之后做完任务后自动上传

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,26 +27,23 @@
         android:text="选择" />
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
-        android:layout_alignEnd="@+id/tv_hint"
         android:layout_alignLeft="@+id/select"
-        android:layout_alignRight="@+id/tv_hint"
         android:layout_alignStart="@+id/select"
         android:layout_below="@+id/select"
-        android:layout_marginTop="32dp"
-        android:hint="保存到本地的路径为 sdcard/tmp/"
-        android:id="@+id/textView" />
+        android:layout_marginTop="14dp"
+        android:hint="保存到本地的路径为 sdcard/tmp/" />
 
     <Button
         android:id="@+id/start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/endTime"
-        android:layout_marginTop="29dp"
-        android:layout_toEndOf="@+id/textView6"
-        android:layout_toRightOf="@+id/textView6"
+        android:layout_alignLeft="@+id/textView11"
+        android:layout_alignStart="@+id/textView11"
+        android:layout_below="@+id/textView11"
+        android:layout_marginTop="25dp"
         android:text="开始" />
 
     <TextView
@@ -55,8 +52,8 @@
         android:layout_alignLeft="@+id/textView"
         android:layout_alignStart="@+id/textView"
         android:layout_below="@+id/textView"
-        android:layout_marginTop="28dp"
-        android:text="错误信息: "
+        android:layout_marginTop="14dp"
+        android:text="信息: "
         android:id="@+id/textView3" />
 
     <TextView
@@ -146,11 +143,30 @@
         android:id="@+id/stop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/start"
-        android:layout_alignStart="@+id/start"
-        android:layout_below="@+id/start"
-        android:layout_marginTop="24dp"
+        android:layout_alignBaseline="@+id/start"
+        android:layout_alignBottom="@+id/start"
+        android:layout_alignEnd="@+id/tv_hint"
+        android:layout_alignRight="@+id/tv_hint"
         android:text="停止" />
+
+    <Button
+        android:id="@+id/jixu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/serviceBtn"
+        android:layout_centerHorizontal="true"
+        android:text="继续" />
+
+    <Button
+        android:id="@+id/serviceBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/stop"
+        android:layout_marginTop="21dp"
+        android:layout_centerHorizontal="true"
+
+        android:text="服务器模式" />
+
 
 
 </RelativeLayout>
